# Python-for-lunch-Notebooks

./: Conda_and_environments.ipynb  Examples xarray.ipynb  Introduction.ipynb  Jupyter_on_Gemini.md  Operability with Fortran.ipynb  README.md  conda_and_environments.md  environment.yml
Lunchtalk Leo 2017/: Examples Numpy.ipynb
PFL0_introduction/: README.md
PFL2_Jupyter-notebooks/: Jupyter_notebooks.ipynb  Jupyter_on_Cartesius.md  Operability with Fortran.ipynb  README.md
PFL3_Jupyter_examples/: README.md
PFL4_Xarray/: Presentation_Leo.pptx
PFL5_object_oriented_programming/: balloons.py  grid.py  grid_example.ipynb
PFL7_matplotlib_basics/: matplotlib_basics.ipynb
PFL_02_Jupyter-notebooks/: Jupyter_on_Cartesius.md  Jupyter_on_Gemini.md  README.md
PFL_03_Jupyter_examples/: README.md
PFL_04_Xarray/: Solutions_tutorial.ipynb  Xarray Tutorial.ipynb
PFL_07_matplotlib_basics/: Matplotlib coordinate systems.ipynb  matplotlib_basics.ipynb  subplot grids.ipynb
PFL_08_plotting_advanced/: Examples Cartopy Leo.ipynb  Plotting_presentation.ipynb  zonal_wind.nc
PFL_10_defensive_programming/: Defensive_programming.ipynb  Defensive_programming_solutions.ipynb
PFL_11_Pandas/: PFL_11_Pandas.ipynb  PFL_11_exercise_answers.ipynb  knmi_ijmuiden.csv
PFL_12_Exceptions_and_ListComprehensions/: Exceptions.ipynb  ListComprehensions.ipynb
PFL_13_Julia/: Introduction to Julia 20191002.ipynb  README.md
PFL_14_Numpy/: Numpy-vectorization.ipynb
PFL_16_teaching/: links.md
PFL_21_Performance02_cbindings/knn_cmake/wrapping/python/: CMakeLists.txt  knn_swig.i
(+42 files in other folders)
